# gamecode-web

./: .dockerignore  .env.example  .gitignore  CLOUDFLARE-HOMELAB.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  HOMELAB-DEPLOYMENT.md  INSTALL.md  Makefile  README.md  build.rs  build.sh  fix-service.sh  generate_hash.py  justfile  runme.sh  test_server.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  docker-build.yml
client/: Cargo.toml  Trunk.toml  index.html
client/config/: default.toml
client/src/: api.rs  main.rs  markdown.rs  simple_storage.rs  storage.rs
client/src/components/: auth.rs  chat.rs  composer.rs  context_manager.rs  empty_state.rs  icons.rs  mod.rs  model_picker.rs  persona_picker.rs  resize_handle.rs  sidebar.rs  sidebar_resize.rs
client/src/notebook/: cell.rs  mod.rs  parser.rs  renderer.rs
config/: PROMPTS_README.md  default.toml  prompts.toml
docs/: ARCHITECTURE.md  BUILD.md  FORTEAN-HOWTO.md  HUGGINGFACE_README.md  ROADMAP.md
docs/design/: chat-ui-refresh.md  sso-via-anz.md
docs/design/done/: model-picker-unlock.md
docs/design/inbound/gamecode-web/: README.md
docs/design/inbound/gamecode-web/project/: App.jsx  Composer.jsx  Gamecode Chat.html  Icons.jsx  Message.jsx  Pickers.jsx  Sidebar.jsx  data.js  highlight.jsx  styles.css
scripts/: create-service-plist.sh  install-service.sh  service-manager.sh  services-info.sh  setup-cloudflare.sh  svcctl  uninstall-cloudflare.sh  uninstall-service.sh
server/: Cargo.toml
server/src/: api.rs  auth.rs  config.rs  error.rs  main.rs
server/src/auth/: extractor.rs  mod.rs  oidc.rs  session.rs
server/src/providers/: mod.rs  ollama.rs
