[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true