[package]
name = "gamecode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
cookie = "0.18"

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# HTTP client for Ollama + OIDC
reqwest = { version = "0.11", features = ["stream", "json"] }
serde_urlencoded = "0.7"
futures = "0.3"
async-stream = "0.3"

# Security
aes-gcm = "0.10"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.9"
sha2 = "0.10"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Time
time = { version = "0.3", features = ["serde"] }

# Environment
dotenvy = "0.15"